# sqlx-sqlite-problem

./: Cargo.toml  Dockerfile
src/: main.rs
