[package]
name = "sqlx-sqlite-problem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "uuid", "sqlite"] }
sqlx = { path = "../sqlx", features = ["runtime-tokio-rustls", "uuid", "sqlite"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
